# auv-sim-unity

./: .gitattributes  .gitignore  .gitignore.txt  AUV sim.sln  Assembly-CSharp.csproj  CMakeLists.txt  README.md  auv-sim-unity-HDRP.sln  auv-sim-unity.sln  auv-sim-unity.slnx  package.xml
Assets/: Black.mat  FollowVisualization.cs  New Terrain 1.asset  New Terrain 2.asset  New Terrain.asset  NewLayer 1.terrainlayer  NewLayer 2.terrainlayer  NewLayer 6.terrainlayer  NewLayer.terrainlayer  OutdoorsScene.unity  PointCloudGraph.vfx  ProjectCaustics.cs  Red.mat  TerrainData_0279a12e-9e92-4eb5-82d3-17fcc8b979cd.asset  TerrainData_1d65df22-2a04-4526-8fd3-beb371d0ee13.asset  TerrainData_35941a26-3c7c-4556-b51b-29114f4e680e.asset  TerrainData_42eb6b0f-2d66-4186-9d6d-942ac41be28e.asset  TerrainData_714cc712-d27f-4cc6-b0b9-632cd7901bf2.asset  TerrainData_7a00575b-1273-4c83-82e7-2070f636cd03.asset  TerrainData_978d27ca-69aa-4a29-9770-a6f8c1c0e6f8.asset  TerrainData_b3de72d7-5e13-4035-b1ca-e113dfa7bdc2.asset  TerrainData_be8aaa1b-d97e-49ec-805b-fc625001a038.asset  TerrainData_d853252b-a845-480b-95de-355ea14260e9.asset  TerrainData_e56b1a78-5fd0-4729-aca0-c59d7f25967b.asset  TerrainData_efb35181-9a07-4498-84c4-68d77338f6ae.asset  TerrainData_fdf664a7-e1cf-4584-8aeb-79818fe1ec49.asset  UniversalRenderPipelineGlobalSettings.asset  expec.cs  msgbrowser_settings.asset  rock1.blend
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Temp/: workerlic
(+571 files in other folders)
